src/opsc-java8/tests/opsc/Tiny.java
import io.github.eisop.opsc.qual.Sql;
import java.sql.*;

class Tiny {
    // :: error: (assignment.type.incompatible)
    @Sql String s = "dummy";

    void testSimplePreparedStatement() throws SQLException {
        Connection conn =
                DriverManager.getConnection(
                        "jdbc:postgresql://localhost:5432/chinook", "postgres", "postgres");

        // this should work
        @Sql(
                in = {"Timestamp"},
                out = {"@NonNull INTEGER", "@NonNull DECIMAL", "@Nullable @MaxLength(40) VARCHAR"})
        PreparedStatement ps1 =
                conn.prepareStatement(
                        "SELECT InvoiceId, Total, BillingCountry FROM Invoice WHERE InvoiceDate > ?");

        @Sql(out = {"@NonNull INTEGER", "@NonNull DECIMAL", "@Nullable INTEGER"})
        PreparedStatement ps2 =
                // :: error: (assignment.type.incompatible)
                conn.prepareStatement(
                        "SELECT InvoiceId, Total, BillingCountry FROM Invoice WHERE InvoiceDate > ?");

        @Sql(
                out = {
                    "@NonNull INTEGER",
                    "@NonNull DECIMAL",
                    "@Nullable @MaxLength(40) VARCHAR",
                    "@NonNull INTEGER"
                })
        PreparedStatement ps3 =
                // :: error: (assignment.type.incompatible)
                conn.prepareStatement(
                        "SELECT InvoiceId, Total, BillingCountry FROM Invoice WHERE InvoiceDate > ?");
    }
}
